--- a/sps.html
+++ b/sps.html
@@ -26,6 +26,10 @@
     <div class="msgcontainer">
         <div id="msg">Play Your Move!</div>
     </div>
+    <div class="newgamecontainer">
+        <button class="newgame">New Game</button>
+    </div>
     <script src="sps.js"></script>
 </body>
+
 </html>
